src/test/ui/box/into-boxed-slice-fail.stderr
error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> $DIR/into-boxed-slice-fail.rs:7:35
   |
LL |     let _ = Box::into_boxed_slice(boxed_slice);
   |             --------------------- ^^^^^^^^^^^ doesn't have a size known at compile-time
   |             |
   |             required by a bound introduced by this call
   |
   = help: the trait `Sized` is not implemented for `[u8]`
note: required by a bound in `Box::<T, A>::into_boxed_slice`
  --> $SRC_DIR/alloc/src/boxed.rs:LL:COL
   |
LL | impl<T, A: Allocator> Box<T, A> {
   |      ^ required by this bound in `Box::<T, A>::into_boxed_slice`

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> $DIR/into-boxed-slice-fail.rs:7:13
   |
LL |     let _ = Box::into_boxed_slice(boxed_slice);
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
   = note: slice and array elements must have `Sized` type

error[E0277]: the size for values of type `dyn Debug` cannot be known at compilation time
  --> $DIR/into-boxed-slice-fail.rs:11:35
   |
LL |     let _ = Box::into_boxed_slice(boxed_trait);
   |             --------------------- ^^^^^^^^^^^ doesn't have a size known at compile-time
   |             |
   |             required by a bound introduced by this call
   |
   = help: the trait `Sized` is not implemented for `dyn Debug`
note: required by a bound in `Box::<T, A>::into_boxed_slice`
  --> $SRC_DIR/alloc/src/boxed.rs:LL:COL
   |
LL | impl<T, A: Allocator> Box<T, A> {
   |      ^ required by this bound in `Box::<T, A>::into_boxed_slice`

error[E0277]: the size for values of type `dyn Debug` cannot be known at compilation time
  --> $DIR/into-boxed-slice-fail.rs:11:13
   |
LL |     let _ = Box::into_boxed_slice(boxed_trait);
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `dyn Debug`
   = note: slice and array elements must have `Sized` type

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
